# ha_light_sensor

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  sdkconfig.defaults
kicad/WakeCircuit/: #auto_saved_files#  WakeCircuit-B_Cu.gbr  WakeCircuit-B_Mask.gbr  WakeCircuit-B_Paste.gbr  WakeCircuit-B_Silkscreen.gbr  WakeCircuit-Edge_Cuts.gbr  WakeCircuit-F_Cu.gbr  WakeCircuit-F_Mask.gbr  WakeCircuit-F_Paste.gbr  WakeCircuit-F_Silkscreen.gbr  WakeCircuit-job.gbrjob  WakeCircuit.csv  WakeCircuit.kicad_pcb  WakeCircuit.kicad_prl  WakeCircuit.kicad_pro  WakeCircuit.kicad_sch  WakeCircuit.kicad_sch-bak  WakeCircuit.wbk  _autosave-WakeCircuit.kicad_sch  fp-info-cache  fp-lib-table
kicad/WakeCircuit/3214J-1-103E.pretty/: Potentiometer_Bourns_3214J_Horizontal.kicad_mod
kicad/WakeCircuit/Output/: WakeCircuit-BOM.csv  WakeCircuit-B_Cu.gbr  WakeCircuit-B_Mask.gbr  WakeCircuit-B_Paste.gbr  WakeCircuit-B_Silkscreen.gbr  WakeCircuit-Edge_Cuts.gbr  WakeCircuit-F_Cu.gbr  WakeCircuit-F_Mask.gbr  WakeCircuit-F_Paste.gbr  WakeCircuit-F_Silkscreen.gbr  WakeCircuit-NPTH.drl  WakeCircuit-PTH.drl  WakeCircuit-bottom.pos  WakeCircuit-job.gbrjob  WakeCircuit-top.pos  report.txt
main/: CMakeLists.txt  config.h.template  main.c  secrets.h.template
main/include/: common.h  diagnostic.h  led_controller.h  mqtt_manager.h  sensor_manager.h  wifi_manager.h
main/src/: diagnostic.c  led_controller.c  main.c  mqtt_manager.c  sensor_manager.c  wifi_manager.c
traps/backdoor/: config.h.template  secrets.h.template
traps/garage_near/: config.h.template
traps/template/: config.h.template
(+6 files in other folders)
